force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/CopilotUtteranceAnalysis__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Copilot Utterance Analysis</labelOverride>
        <masterLabel>Copilot Utterance Analysis</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>