force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/BotId__c.field-meta.xml
<CustomField>
    <fullName>BotId__c</fullName>
    <label>Bot Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Bot Id</labelOverride>
        <masterLabel>Bot Id</masterLabel>
        <refAttrDeveloperName>BotId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>