force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/BotName__c.field-meta.xml
<CustomField>
    <fullName>BotName__c</fullName>
    <label>Bot Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Bot Name</labelOverride>
        <masterLabel>Bot Name</masterLabel>
        <refAttrDeveloperName>BotName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>