force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/CategoryId__c.field-meta.xml
<CustomField>
    <fullName>CategoryId__c</fullName>
    <label>Category ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Category ID</labelOverride>
        <masterLabel>Category ID</masterLabel>
        <refAttrDeveloperName>CategoryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>