force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/CategoryName__c.field-meta.xml
<CustomField>
    <fullName>CategoryName__c</fullName>
    <label>Category Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Category Name</labelOverride>
        <masterLabel>Category Name</masterLabel>
        <refAttrDeveloperName>CategoryName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>