force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/ClusterId__c.field-meta.xml
<CustomField>
    <fullName>ClusterId__c</fullName>
    <label>Cluster ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Cluster ID</labelOverride>
        <masterLabel>Cluster ID</masterLabel>
        <refAttrDeveloperName>ClusterId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>