force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/ClusterName__c.field-meta.xml
<CustomField>
    <fullName>ClusterName__c</fullName>
    <label>Cluster Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Cluster Name</labelOverride>
        <masterLabel>Cluster Name</masterLabel>
        <refAttrDeveloperName>ClusterName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>