force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/KQ_RequestId__c.field-meta.xml
<CustomField>
    <fullName>KQ_RequestId__c</fullName>
    <label>Key Qualifier Request ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Request ID</labelOverride>
        <masterLabel>Key Qualifier Request ID</masterLabel>
        <refAttrDeveloperName>KQ_RequestId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>