force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <label>Request ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Request ID</labelOverride>
        <masterLabel>Request ID</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <refAttrDeveloperName>RequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>