force-app/main/default/objects/CopilotUtteranceAnalysis__dlm/fields/TopicRelevance__c.field-meta.xml
<CustomField>
    <fullName>TopicRelevance__c</fullName>
    <label>Topic Relevance</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Topic Relevance</labelOverride>
        <masterLabel>Topic Relevance</masterLabel>
        <refAttrDeveloperName>TopicRelevance</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>